Fix cropper position when max-height set

--- a/src/image-cropper.component.scss
+++ b/src/image-cropper.component.scss
@@ -6,6 +6,7 @@
     max-height: 100%;
     overflow: hidden;
     padding: 5px;
+    text-align: center;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
